fixing main text align vertical center

--- a/style.scss
+++ b/style.scss
@@ -167,6 +167,8 @@ main {
   grid-area: main;
   background-image: url(./resource/main-background.jpg);
   @extend %bgimgcenter;
+  display: flex;
+  align-items: center;
 }
 
 .main-text {
@@ -175,7 +177,6 @@ main {
   width: 35%;
   height: auto;
   display: block;
-  margin-top: 20rem;
   background-color: hsla(0, 0%, 0%, 0.2);
   color: white;
 }
